--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,9 @@ cmake_minimum_required(VERSION 3.12)
 project(baz)
 
 include(cmake/deps.cmake)
-
-file(GLOB SOURCES CONFIGURE_DEPENDS "src/*.c")
+include(cmake/files.cmake)
 
 add_library(baz STATIC ${SOURCES})
 
-target_include_directories(baz PUBLIC "inc/")
+target_include_directories(baz PUBLIC ${INCLUDE_DIR})
 target_link_libraries(baz bar)
